--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: #fff;
+  min-width: 320px;
+  max-width: 1280px;
 }
 
 .App-logo {
@@ -21,7 +24,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
