--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,13 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
   min-width: 320px;
   max-width: 1280px;
+  min-height: 100vh;
+  margin: 0 auto;
 }
-
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -14,16 +17,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
 }
 
 .App-link {
@@ -37,4 +30,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
