--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -57,7 +57,7 @@
   min-width: 270px;
   min-height: 320px;
   background-repeat: no-repeat;
-  background-image: url('../../images/student/image_.jpg');
+  background-image: url('../../images/student/Image2021.jpeg');
   background-size: cover;
   background-position: center;
   border-radius: 5px;
@@ -66,13 +66,12 @@
 .AboutMe-item {
   color: #000;
   background-color: none;
-  border-radius: 10px;
+  border: none;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.21;
 }
 .AboutMe-item:hover {
-  border-radius: none;
   opacity: .5;
 }
