--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,18 +1,51 @@
 .Footer {
-  background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: space-between;
+  width: 100%;
   margin-top: auto;
   min-height: 172px;
 }
 
-.Footer__copyright {
+.Footer__header {
+  display: flex;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: flex-end;
+  max-width: 1140px;
+  min-width: 89%;
+  min-height: 160px;
+  border-bottom: 1px solid #E8E8E8;
+}
+.Footer__footer {
+  display: flex;
+  box-sizing: border-box;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1140px;
+  min-width: 89%;
+}
+
+.Footer__title {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.21;
+  margin-top: 0;
+}
+
+.Footer-item {
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.22;
-  margin: 0;
-  text-align: center;
-  color: #545454;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 1.21;
+  margin-right: 10px;
+  color: #000;
+}
+.Footer-item:last-of-type {
+  margin-right: 0;
 }
 
 @media screen and (max-width: 340px) {
