--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -18,9 +18,10 @@
 
 .Portfolio__title {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 400;
-  line-height: 1.21;
+  line-height: 1.11;
+  color:#A0A0A0;
   margin-bottom: 23px;
   margin-top: 0;
 }
@@ -60,8 +61,12 @@
 
 .Portfolio-arrow {
   max-width: 29px;
-  display: flex;
-  justify-content: center;
+  width: 29px;
+  height: 60px;
+  background-image: url(../../images/portfolio/text__COLOR_font-main.svg);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: 50%;
   font-size: 50px;
   line-height: 1.2;
   color: black;
