--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: space-between;
+  align-items: center;
   width: 100%;
   margin-top: auto;
   min-height: 172px;
+  background-color: #FAFAFA;
 }
 
 .Footer__header {
@@ -15,7 +16,7 @@
   align-items: flex-end;
   max-width: 1140px;
   min-width: 89%;
-  min-height: 160px;
+  min-height: 115px;
   border-bottom: 1px solid #E8E8E8;
 }
 .Footer__footer {
@@ -25,6 +26,7 @@
   align-items: center;
   max-width: 1140px;
   min-width: 89%;
+  min-height: 56px;
 }
 
 .Footer__title {
@@ -32,7 +34,9 @@
   font-size: 13px;
   font-weight: 400;
   line-height: 1.21;
+  color: #A0A0A0;
   margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .Footer-item {
