--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -8,17 +8,12 @@
 }
 .AboutMe-container {
   display: flex;
-  max-width: 1140px;
-  min-width: 89%;
   justify-content: space-between;
+  align-items: center;
+  max-width: 1140px;
+  width: 89%;
 }
 .AboutMe__header {
-  display: flex;
-  box-sizing: border-box;
-  justify-content: flex-start;
-  align-items: flex-end;
-  max-width: 1140px;
-  min-width: 89%;
   min-height: 160px;
   border-bottom: 1px solid #000;
   margin-bottom: 66px;
@@ -53,17 +48,30 @@
   max-width: 600px;
 }
 
+.AboutMe-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+}
 .AboutMe-image {
-  min-width: 270px;
-  min-height: 320px;
+  width: 40vw;
+  height: 40vw;
+  min-width: 255px;
+  min-height: 307px;
+  max-width: 270px;
+  max-height: 330px;
   background-repeat: no-repeat;
   background-image: url('../../images/student/Image2021.jpeg');
   background-size: cover;
   background-position: center;
   border-radius: 5px;
+  margin-left: 49px;
 }
 
 .AboutMe-item {
+  align-self: flex-start;
   color: #000;
   background-color: none;
   border: none;
