--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -1,12 +1,21 @@
 .NavTab {
+  display: flex;
+  justify-content: center;
   min-height: 40px;
 }
 
 .NavTab__links {
   display: flex;
+  justify-content: center;
   list-style: none;
-  padding: 0;
   min-height: 40px;
+  padding: 0;
+}
+@media screen and (max-width: 700px) {
+  .NavTab__links {
+    flex-wrap: wrap;
+    align-items: center;
+  }
 }
 
 .NavTab__link {
