--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -7,13 +7,8 @@
 }
 
 .Portfolio__header {
-  display: flex;
-  box-sizing: border-box;
-  justify-content: flex-start;
-  align-items: flex-end;
-  max-width: 1140px;
-  min-width: 89%;
   min-height: 160px;
+  color: #A0A0A0;
 }
 
 .Portfolio__title {
@@ -45,6 +40,7 @@
 }
 .Portfolio-item:last-of-type {
   margin-bottom: 115px;
+  border-bottom: none;
 }
 .Portfolio-link {
   display: flex;
@@ -56,7 +52,7 @@
   font-weight: inherit;
   color: inherit;
   text-decoration: none;
-  padding: 0 5px;
+  padding: 0;
 }
 .Portfolio-link:hover {
   background: linear-gradient(100deg, #FF6838, #fff);
