--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -10,6 +10,11 @@
   border-radius: 5px;
   margin: 20px auto 0;
 }
+@media screen and (max-width: 881px) {
+  .Promo {
+    min-height: 700px;
+  }
+}
 
 .Promo__title {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
