--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -1,22 +1,67 @@
 .NavTab {
-  display: flex;
-  justify-content: center;
-  min-height: 40px;
+
 }
 
-.NavTab__links {
+.NavTab__items {
   display: flex;
   justify-content: center;
   list-style: none;
   min-height: 40px;
   padding: 0;
 }
-@media screen and (max-width: 700px) {
-  .NavTab__links {
-    flex-wrap: wrap;
-    align-items: center;
-  }
+
+.NavTab__items_place_header {
+
 }
+.NavTab__items_place_techs {
+
+}
+.NavTab__items_place_aboutMe {
+
+}
+.NavTab__items_place_promo {
+  flex-direction: column;
+  max-width: 1140px;
+  min-width: 89%;
+  padding: 0;
+}
+.NavTab__items_place_portfolio {
+
+}
+
+.NavTab__item {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  margin-right: 10px;
+}
+.NavTab__item:last-of-type {
+  margin-right: 0;
+}
+
+.NavTab__item_place_header {
+  margin-right: 10px;
+}
+.NavTab__item_place_techs {
+  margin-right: 10px;
+}
+.NavTab__item_place_promo {
+  margin-right: 10px;
+}
+.NavTab__item_place_aboutMe {
+  margin-right: 10px;
+}
+
+.NavTab__item_place_portfolio {
+  font-size: 30px;
+  line-height: 1.66;
+  font-weight: 400;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #E8E8E8;
+}
+.NavTab__item_place_portfolio:last-of-type {
+  margin-bottom: 115px;
+  border-bottom: none;
+}
+
 
 .NavTab__link {
   font-family: inherit;
@@ -36,10 +81,6 @@
   cursor: pointer;
   opacity: .8;
 }
-
-.NavTab__item {
-  margin-right: 10px;
-}
-.NavTab__item:last-of-type {
-  margin-right: 0;
+.NavTab__link_active {
+  background-color: linear-gradient(100deg, #FF6838, #fff);
 }
