--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,33 +1,16 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  min-width: 320px;
-  max-width: 1280px;
-  min-height: 100vh;
+  display: grid;
+  box-sizing: border-box;
+  outline: 1px solid red;
+  background-color: inherit;
   margin: 0 auto;
-}
-/*
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  min-width: 319px;
+  max-width: 1280px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-content {
+  display: grid;
+  grid-template-rows: repeat(auto-fit, auto);
+  min-height: 70vh;
+  max-width: 1280px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
