--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -1,8 +1,4 @@
 .NavTab {
-
-}
-
-.NavTab__items {
   display: flex;
   justify-content: center;
   list-style: none;
@@ -10,47 +6,84 @@
   padding: 0;
 }
 
-.NavTab__items_place_header {
+.NavTab_hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.NavTab_place_header {
+  min-width: 200px;
+}
+.NavTab_place_techs {
+  flex-wrap: wrap;
+}
+@media screen and (max-width:660px) {
+  .NavTab_place_techs {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 10px;
+  }
+}
+.NavTab_place_aboutMe {
 
 }
-.NavTab__items_place_techs {
+.NavTab_place_promo {
 
 }
-.NavTab__items_place_aboutMe {
-
-}
-.NavTab__items_place_promo {
+.NavTab_place_portfolio {
   flex-direction: column;
   max-width: 1140px;
   min-width: 89%;
   padding: 0;
 }
-.NavTab__items_place_portfolio {
-
-}
 
 .NavTab__item {
+  display: flex;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  margin-right: 10px;
-}
-.NavTab__item:last-of-type {
-  margin-right: 0;
+  margin-left: 10px;
 }
 
 .NavTab__item_place_header {
   margin-right: 10px;
+  min-width: 76px;
+  align-items: center;
+  justify-content: center;
 }
 .NavTab__item_place_techs {
   margin-right: 10px;
+  margin-bottom: 10px;
+  min-width: 90px;
+  min-height: 60px;
+  background-color: #E8E8E8;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.NavTab__item_place_techs:hover {
+  opacity: 1;
+  background-color: #FF6838;
+  color: #fff;
 }
 .NavTab__item_place_promo {
   margin-right: 10px;
+  min-width: 96px;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+  background-color: #E8E8E8;
+}
+.NavTab__item_place_promo:hover {
+  opacity: 1;
+  background-color: #FF6838;
+  color: #fff;
 }
 .NavTab__item_place_aboutMe {
   margin-right: 10px;
 }
 
 .NavTab__item_place_portfolio {
+  display: flex;
+  justify-content: space-between;
   font-size: 30px;
   line-height: 1.66;
   font-weight: 400;
@@ -61,9 +94,20 @@
   margin-bottom: 115px;
   border-bottom: none;
 }
+.NavTab__item:hover {
+  cursor: pointer;
+  opacity: .5;
+}
+.NavTab__item-active {
+  background-color: #2BE080;
+  border-radius: 3px;
+}
 
 
 .NavTab__link {
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
   font-family: inherit;
   font-size: inherit;
   font-weight: inherit;
@@ -73,14 +117,8 @@
   color: inherit;
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-.NavTab__link:hover {
-  cursor: pointer;
-  opacity: .8;
-}
-.NavTab__link_active {
-  background-color: linear-gradient(100deg, #FF6838, #fff);
+.NavTab__link:active {
+  background-color: #FF6838;
+  border-radius: 3px;
 }
