--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,16 +1,9 @@
 .App {
   display: grid;
   box-sizing: border-box;
-  outline: 1px solid red;
   background-color: inherit;
   margin: 0 auto;
   min-width: 319px;
-  max-width: 1280px;
-}
-
-.App-content {
-  display: grid;
-  grid-template-rows: repeat(auto-fit, auto);
-  min-height: 70vh;
+  width: 100%;
   max-width: 1280px;
 }
