--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -14,20 +14,20 @@
 .NavTab_place_header {
   min-width: 200px;
 }
+.NavTab_place_popup {
+  flex-direction: column;
+}
 .NavTab_place_techs {
   flex-wrap: wrap;
 }
-@media screen and (max-width:660px) {
-  .NavTab_place_techs {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-gap: 10px;
-  }
-}
+
 .NavTab_place_aboutMe {
 
 }
 .NavTab_place_promo {
+
+}
+.NavTab_place_footer {
 
 }
 .NavTab_place_portfolio {
@@ -43,6 +43,12 @@
   margin-left: 10px;
 }
 
+.NavTab__item_place_popup {
+  margin-right: 10px;
+  min-width: 76px;
+  align-items: center;
+  justify-content: center;
+}
 .NavTab__item_place_header {
   margin-right: 10px;
   min-width: 76px;
@@ -59,11 +65,6 @@
   align-items: center;
   justify-content: center;
 }
-.NavTab__item_place_techs:hover {
-  opacity: 1;
-  background-color: #FF6838;
-  color: #fff;
-}
 .NavTab__item_place_promo {
   margin-right: 10px;
   min-width: 96px;
@@ -72,18 +73,35 @@
   justify-content: center;
   background-color: #E8E8E8;
 }
-.NavTab__item_place_promo:hover {
-  opacity: 1;
+.NavTab__item_place_promo:hover, .NavTab__item_place_techs:hover  {
   background-color: #FF6838;
+  opacity: 1;
   color: #fff;
 }
 .NavTab__item_place_aboutMe {
   margin-right: 10px;
 }
+.NavTab__item_place_footer {
+  justify-content: center;
+  align-items: center;
+}
+.NavTab__item_place_footer:last-of-type {
+  margin-bottom: 0;
+}
 
+.NavTab__item_place_popup {
+  display: flex;
+  justify-content: space-between;
+  font-size: 30px;
+  line-height: 1.66;
+  font-weight: 400;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #E8E8E8;
+}
 .NavTab__item_place_portfolio {
   display: flex;
   justify-content: space-between;
+  min-width: 320px;
   font-size: 30px;
   line-height: 1.66;
   font-weight: 400;
@@ -97,10 +115,14 @@
 .NavTab__item:hover {
   cursor: pointer;
   opacity: .5;
+  border-color: #FF6838;
 }
 .NavTab__item-active {
   background-color: #2BE080;
   border-radius: 3px;
+}
+.NavTab_active {
+  border-bottom: 1px solid #000;
 }
 
 
@@ -114,11 +136,33 @@
   font-style: inherit;
   line-height: inherit;
   text-decoration: none;
+  border-color: inherit;
+  opacity: inherit;
   color: inherit;
   width: 100%;
   height: 100%;
 }
-.NavTab__link:active {
-  background-color: #FF6838;
-  border-radius: 3px;
+
+@media screen and (max-width:660px) {
+  .NavTab_place_techs {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-gap: 10px;
+  }
+  .NavTab__item_place_portfolio {
+    font-size: 28px;
+    line-height: 1.67;
+  }
+}
+@media screen and (max-width:460px) {
+  .NavTab_place_footer {
+    flex-direction: column;
+    order: -1;
+  }
+  .NavTab__item_place_portfolio {
+    font-size: 18px;
+  }
+  .NavTab__item_place_footer {
+    margin-bottom: 10px;
+  }
 }
