--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -3,65 +3,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-width: 320px;
   width: 100%;
-}
-
-.Portfolio__header {
-  min-height: 160px;
-  color: #A0A0A0;
-}
-
-.Portfolio__title {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.11;
-  color:#A0A0A0;
-  margin-bottom: 23px;
-  margin-top: 0;
-}
-
-.Portfolio-nav {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  max-width: 1140px;
-  min-width: 89%;
-  padding: 0;
-}
-
-.Portfolio-item {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 30px;
-  line-height: 1.66;
-  font-weight: 400;
-  margin-bottom: 20px;
-  border-bottom: 1px solid #E8E8E8;
-}
-.Portfolio-item:last-of-type {
-  margin-bottom: 115px;
-  border-bottom: none;
-}
-.Portfolio-link {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  font-weight: inherit;
-  color: inherit;
-  text-decoration: none;
-  padding: 0;
-}
-.Portfolio-link:hover {
-  background: linear-gradient(100deg, #FF6838, #fff);
-  border-radius: 10px;
-  color: #fff;
 }
 
 .Portfolio-arrow {
   max-width: 29px;
+  min-width: 18px;
   width: 29px;
   height: 60px;
   background-image: url(../../images/portfolio/text__COLOR_font-main.svg);
@@ -71,4 +19,10 @@
   font-size: 50px;
   line-height: 1.2;
   color: black;
+}
+
+@media screen and (max-width: 460px) {
+  .Portfolio {
+  align-items: stretch;
+  }
 }
