--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 1280px;
+  align-self: stretch;
   margin-top: auto;
   min-height: 172px;
   background-color: #FAFAFA;
