--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,7 @@
 .Main {
-  display: grid;
-  grid-template-rows: repeat(auto-fit, auto);
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
   max-width: 1280px;
   min-width: 320px;
 }
