--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -6,6 +6,7 @@
   max-width: 1200px;
   min-height: 493px;
   width: 93.8%;
+  flex-grow: 1;
   background-color: #F5F5F5;
   border-radius: 5px;
 }
