--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -2,30 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  align-self: stretch;
   min-height: 608px;
   background-color: #F5F5F5;
 }
-.Techs__header {
-  min-height: 160px;
-  border-bottom: 1px solid #000;
-  margin-bottom: 90px;
-}
 .Techs__title {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 22px;
+  font-size: 50px;
   font-weight: 400;
   max-width: 600px;
-  line-height: 1.21;
-  margin-bottom: 23px;
-  margin-top: 0;
-}
-.Techs__title_place_blank {
-  font-size: 50px;
-  width: 100%;
   line-height: 1.16;
   align-self: center;
   text-align: center;
+  margin-top: 0;
   margin-bottom: 26px;
 }
 .Techs__subtitle {
@@ -40,25 +29,25 @@
   margin-top: 0;
   margin-bottom: 100px;
 }
-.Techs-item {
-  width: 90px;
-  height: 60px;
-  color: #000;
-  background-color: #E8E8E8;
-  border-radius: 10px;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.21;
+@media screen and (max-width: 770px) {
+  .Techs__title {
+    margin-bottom: 22px;
+  }
+  .Techs__subtitle {
+    font-size: 12px;
+    line-height: 1.5;
+    margin-bottom: 83px;
+  }
 }
-.Techs-item:hover {
-  background-color: #FF6838;
-  color: #fff;
-}
-@media screen and (max-width: 881px) {
-  .Techs-item {
-    align-self: flex-start;
-    width: 87px;
-    height: 54px;
+@media screen and (max-width: 470px) {
+  .Techs__title {
+    font-size: 30px;
+    line-height: 1.21;
+    margin-bottom: 24px;
+  }
+  .Techs__subtitle {
+    font-size: 11px;
+    line-height: 1.45;
+    margin-bottom: 50px;
   }
 }
