--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,12 @@
 .Header {
   display: flex;
+  position: relative;
   align-items: center;
   min-height: 74px;
-  max-width: 1140px;
-  min-width: 89%;
-  margin: 0 auto 20px auto;
+  max-width: 1280px;
+  padding: 0 60px;
+  align-self: stretch;
+  margin-bottom: 20px;
 }
 
 .Header__button-menu[type='checkbox'] {
@@ -48,5 +50,9 @@
     background-image: url('../../images/navbar/Group.svg');
     border: none;
   }
-
+}
+@media screen and (max-width: 500px) {
+  .Header {
+    margin-bottom: 14px;
+  }
 }
