--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,6 +2,5 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  max-width: 1280px;
-  min-width: 320px;
+  align-self: stretch;
 }
