--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,7 +1,7 @@
 .Promo {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   max-width: 1200px;
   min-height: 493px;
@@ -9,11 +9,6 @@
   flex-grow: 1;
   background-color: #F5F5F5;
   border-radius: 5px;
-}
-@media screen and (max-width: 881px) {
-  .Promo {
-    min-height: 700px;
-  }
 }
 
 .Promo__title {
@@ -25,5 +20,30 @@
   line-height: 1.16;
   max-width: 730px;
   text-align: center;
-  margin: auto;
+  margin: 160px auto 151px auto;
+}
+
+@media screen and (max-width: 880px) {
+  .Promo {
+    min-width: 728px;
+  }
+  .Promo__title {
+    max-width: 680px;
+    font-size: 40px;
+    line-height: 1.3;
+    margin: 350px auto 314px auto;
+  }
+}
+@media screen and (max-width: 740px) {
+  .Promo {
+    min-width: 80%;
+  }
+}
+@media screen and (max-width: 560px) {
+  .Promo {
+    min-height: 700px;
+    min-width: 292px;
+  }
+  .Promo__title {
+  }
 }
