--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,68 +1,66 @@
 .AboutProject {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  width: 100%;
+  flex-flow: row wrap;
+  align-items: flex-end;
+  max-width: 1280px;
   min-height: 608px;
 }
-.AboutProject__header {
-  min-height: 160px;
-  border-bottom: 1px solid #000;
+.AboutProject__container {
+  display: flex;
+  flex-flow: column nowrap;
+  flex-basis: 45%;
+  margin-bottom: 110px;
 }
+.AboutProject__container:nth-of-type(2) {
+  align-self: flex-start;
+}
+.AboutProject__container:nth-of-type(4) {
+  flex-basis: 15%;
+  text-align: center;
+}
+.AboutProject__container:nth-of-type(5) {
+  flex-basis: 75%;
+  text-align: center;
+}
+.AboutProject__container:last-of-type {
+  align-self: flex-end;
+}
+
 .AboutProject__title {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.21;
   margin-bottom: 23px;
   margin-top: 0;
 }
-.AboutProject__title_size_m {
-  font-size: 20px;
-}
-.AboutProject__title_theme_s {
+
+.AboutProject__subtitle {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 1.42;
+  margin: 0;
+  font-weight: 400;
 }
+
 .AboutProject__title_theme_green {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: #2BE080;
-  min-height: 36px;
-  font-size: 14px;
+  flex-grow: 1;
   margin-bottom: 14px;
 }
-.AboutProject__title_theme_gray{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.AboutProject__title_theme_gray {
   background-color: #F2F2F2;
   margin-bottom: 14px;
-  font-size: 14px;
-  min-height: 36px;
+  flex-grow: 5;
 }
-.AboutProject__title_theme_white {
-  margin-bottom: 0;
+.AboutProject__subtitle_theme_gray {
   font-size: 14px;
   color: #A0A0A0;
 ;
 }
 
-.AboutProject__containers {
-  width: 80%;
-  display: flex;
-  margin: 0 auto;
-}
-.AboutProject__container {
-  max-width: 550px;
-  width: 100%;
-  margin-right: 30px;
-}
-.AboutProject__container:last-of-type {
-  margin-right: 0;
-}
+
 .AboutProject__container_size_m {
   justify-content: center;
   text-align: center;
@@ -75,4 +73,11 @@
   flex-basis: 80%;
   text-align: center;
   max-width: 912px;
+}
+
+@media screen and (max-width: 770px) {
+
+}
+@media screen and (max-width: 470px) {
+
 }
