--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,82 +1,90 @@
 .AboutProject {
   display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-  align-items: flex-end;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
   max-width: 1280px;
-  min-height: 608px;
+}
+.AboutProject__containers {
+  align-self: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 40px 1fr 1fr;
+  max-width: 1140px;
+  width: 90%;
 }
 .AboutProject__container {
-  display: flex;
-  flex-flow: column nowrap;
-  flex-basis: 45%;
-  margin-bottom: 110px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-weight: 400;
+}
+.AboutProject__container:nth-of-type(1) {
+  grid-column: 1/3;
 }
 .AboutProject__container:nth-of-type(2) {
-  align-self: flex-start;
+  grid-column: 4/6;
+}
+.AboutProject__container:nth-of-type(3) {
+  grid-column: span 1;
 }
 .AboutProject__container:nth-of-type(4) {
-  flex-basis: 15%;
-  text-align: center;
-}
-.AboutProject__container:nth-of-type(5) {
-  flex-basis: 75%;
-  text-align: center;
-}
-.AboutProject__container:last-of-type {
-  align-self: flex-end;
+  grid-column: span 4;
 }
 
 .AboutProject__title {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  font-family: inherit;
+  font-weight: inherit;
   font-size: 20px;
-  font-weight: 400;
   line-height: 1.21;
   margin-bottom: 23px;
   margin-top: 0;
 }
+.AboutProject__title_theme_green {
+
+  justify-content: center;
+  align-items: center;
+  background-color: #2BE080;
+}
+.AboutProject__title_theme_gray {
+  justify-content: center;
+  align-items: center;
+  background-color: #F2F2F2;
+}
+.AboutProject__title_theme_gray, .AboutProject__title_theme_green {
+  min-height: 36px;
+  margin-bottom: 14px;
+}
 
 .AboutProject__subtitle {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  display: flex;
+  font-family: inherit;
+  font-weight: inherit;
   font-size: 14px;
   line-height: 1.42;
   margin: 0;
-  font-weight: 400;
-}
-
-.AboutProject__title_theme_green {
-  background-color: #2BE080;
-  flex-grow: 1;
-  margin-bottom: 14px;
-}
-.AboutProject__title_theme_gray {
-  background-color: #F2F2F2;
-  margin-bottom: 14px;
-  flex-grow: 5;
+  margin-bottom: 110px;
 }
 .AboutProject__subtitle_theme_gray {
-  font-size: 14px;
+  justify-content: center;
+  align-items: center;
   color: #A0A0A0;
-;
-}
-
-
-.AboutProject__container_size_m {
-  justify-content: center;
-  text-align: center;
-  flex-basis: 20%;
-  max-width: 228px;
-  margin-right: 0;
-}
-.AboutProject__container_size_x {
-  justify-content: center;
-  flex-basis: 80%;
-  text-align: center;
-  max-width: 912px;
 }
 
 @media screen and (max-width: 770px) {
-
+  .AboutProject__containers {
+    grid-template-columns: 1fr 1fr 30px 1fr 1fr;
+  }
+  .AboutProject__container {
+  }
+  .AboutProject__title {
+    margin-bottom: 22px;
+  }
+  .AboutProject__subtitle {
+    margin-bottom: 93px;
+  }
+  .AboutProject__subtitle_theme_gray{
+    margin-bottom: 90px;
+  }
 }
 @media screen and (max-width: 470px) {
 
