--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -23,7 +23,7 @@
   margin-bottom: 23px;
   margin-top: 0;
 }
-.AboutMe__title_place_top {
+.AboutMe__title_place_author {
   font-size: 50px;
   line-height: 1.16;
 }
@@ -50,6 +50,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  padding-left: 5px;
 
 }
 .AboutMe-image {
@@ -67,35 +68,24 @@
   margin-left: 49px;
 }
 
-.AboutMe-item {
-  align-self: flex-start;
-  color: #000;
-  background-color: none;
-  border: none;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.21;
-}
-.AboutMe-item:hover {
-  opacity: .5;
-}
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 780px) {
   .AboutMe-container {
     max-width: 364px;
+    align-items: flex-start;
+    justify-content: flex-start;
   }
     .AboutMe-image {
     min-width: 292px;
   }
   .AboutMe__text {
-  font-size: 12px;
-}
+    font-size: 12px;
+    margin-bottom: 87px;
+  }
 }
 @media screen and (max-width: 700px) {
   .AboutMe-container {
     min-width: 292px;
     flex-direction: column;
-    align-items: flex-start;
     width: 89%;
   }
   .AboutMe-image {
@@ -107,11 +97,28 @@
   }
 }
 @media screen and (max-width: 460px) {
-  .AboutMe-container {
-    min-width: 320px;
+  .AboutMe {
+    max-width: 320px;
 
+  }
+  .AboutMe-container {
+    max-width: 300px;
   }
   .AboutMe-image {
     min-width: 292px;
+    min-height: 352px;
+  }
+
+  .AboutMe__title_place_author {
+    font-size: 30px;
+  }
+  .AboutMe__subtitle {
+    font-size: 11px;
+  }
+
+  .AboutMe__text {
+    font-size: 11px;
+    margin-bottom: 40px;
+    max-width: 292px;
   }
 }
