--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,6 +5,6 @@
   align-items: center;
   background-color: inherit;
   margin: 0 auto;
-  min-width: 319px;
+  width: 95%;
   max-width: 1280px;
 }
