--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -19,11 +19,16 @@
 
 .NavTab_place_promo {
   margin-bottom: 30px;
+  min-height: fit-content;
 }
 .NavTab_place_aboutMe {
-
+  align-items: flex-start;
+  justify-content: flex-start;
+  min-height: fit-content;
+  margin-bottom: 90px;
 }
 .NavTab_place_popup {
+  user-select: none;
   flex-direction: column;
 }
 .NavTab_place_techs {
@@ -35,6 +40,7 @@
 }
 .NavTab_place_portfolio {
   flex-direction: column;
+  align-self: center;
   max-width: 1140px;
   min-width: 89%;
   padding: 0;
@@ -45,11 +51,11 @@
 .NavTab__item {
   display: flex;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
+  margin: 0;
   margin-left: 10px;
 }
 
 .NavTab__item_place_header {
-  margin-right: 10px;
   min-width: 76px;
   font-size: 12px;
   font-weight: 500;
@@ -70,6 +76,8 @@
 }
 .NavTab__item_place_aboutMe {
   margin-right: 10px;
+  margin-left: 0;
+  text-align: left;
 }
 .NavTab__item_place_techs {
   margin-right: 10px;
@@ -86,8 +94,7 @@
   align-items: center;
 }
 .NavTab__item_place_promo:hover, .NavTab__item_place_techs:hover  {
-  background-color: #FF6838;
-  opacity: 1;
+  background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
 }
 .NavTab__item_place_footer:last-of-type {
@@ -104,13 +111,13 @@
   border-bottom: 1px solid #E8E8E8;
 }
 .NavTab__item_place_portfolio {
-  display: flex;
-  justify-content: space-between;
-  min-width: 320px;
+  min-width: 292px;
   font-size: 30px;
   line-height: 1.66;
   font-weight: 400;
   margin-bottom: 20px;
+  margin-left: 0;
+  justify-content: space-between;
   border-bottom: 1px solid #E8E8E8;
 }
 .NavTab__item_place_portfolio:last-of-type {
@@ -145,7 +152,7 @@
   opacity: inherit;
   color: inherit;
   width: 100%;
-  height: 100%;
+  height: inherit;
 }
 
 @media screen and (max-width: 800px) {
@@ -172,12 +179,28 @@
     height: 26px;
     font-size: 10px;
     line-height: 1.6;
+    margin-right: 8px;
+    margin-left: 0;
   }
   .NavTab_place_techs {
     margin-bottom: 70px;
   }
+  .NavTab_place_promo {
+    margin-bottom: 22px;
+    max-width: 258px;
+  }
+  .NavTab_place_portfolio {
+    justify-content: flex-start;
+    align-items: stretch;
+    width: 89%;
+    min-width: 292px;
+  }
   .NavTab__item_place_portfolio {
     font-size: 18px;
+  }
+  .NavTab__item_place_portfolio:last-of-type {
+    margin-bottom: 90px;
+
   }
   .NavTab_place_footer {
     flex-direction: column;
@@ -185,5 +208,6 @@
   }
   .NavTab__item_place_footer {
     margin-bottom: 10px;
+    font-size: 12px;
   }
 }
