--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -33,10 +33,8 @@
 }
 .NavTab_place_techs {
   flex-wrap: wrap;
+  align-self: center;
   margin-bottom: 100px;
-}
-.NavTab_place_footer {
-
 }
 .NavTab_place_portfolio {
   flex-direction: column;
@@ -64,6 +62,7 @@
   justify-content: center;
 }
 .NavTab__item_place_promo {
+  margin-left: 0;
   margin-right: 10px;
   width: 96px;
   height: 36px;
@@ -80,6 +79,7 @@
   text-align: left;
 }
 .NavTab__item_place_techs {
+  margin-left: 0;
   margin-right: 10px;
   margin-bottom: 10px;
   width: 90px;
@@ -99,6 +99,9 @@
 }
 .NavTab__item_place_footer:last-of-type {
   margin-bottom: 0;
+}
+.NavTab__item_place_techs:last-of-type {
+  margin-right: 0;
 }
 
 .NavTab__item_place_popup {
