--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -6,7 +6,6 @@
   max-width: 1200px;
   min-height: 493px;
   width: 93.8%;
-  flex-grow: 1;
   background-color: #F5F5F5;
   border-radius: 5px;
 }
@@ -34,14 +33,17 @@
     margin: 350px auto 314px auto;
   }
 }
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 770px) {
   .Promo {
-    min-width: 80%;
+    min-width: 500px;
+  }
+  .Promo__title {
+    margin: auto;
   }
 }
 @media screen and (max-width: 560px) {
   .Promo {
-    min-height: 700px;
+    min-height: 586px;
     min-width: 292px;
   }
 }
