--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,7 +7,7 @@
   align-self: stretch;
   margin-top: auto;
   min-height: 172px;
-  background-color: #FAFAFA;
+  background-color: #fff;
 }
 
 .Footer__container {
