--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,18 +8,21 @@
 }
 .Header__container {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   position: fixed;
   top: 0;
-  left: 60px;
-  right: 60px;
+  left: auto;
+  right: auto;
   height: 74px;
+  width: calc(100% - 50px);
+  max-width: 1280px;
 }
 
 .Header__button-close {
   position: absolute;
-  top: 30px;
-  right: 30px;
+  top: 18px;
+  right: 60px;
   width: 40px;
   background-color: transparent;
   border: none;
@@ -29,12 +32,10 @@
   background-repeat: no-repeat;
 }
 .Header__button-open {
-  position: absolute;
   visibility: hidden;
   opacity: 0;
-  top: 30px;
-  right: 30px;
   width: 40px;
+  margin-right: 30px;
   background-color: transparent;
   border: none;
   height: 40px;
