--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -2,7 +2,14 @@
   min-width: 38px;
   width: 38px;
   height: 38px;
+  margin-left: 60px;
   background-image: url(../../images/logo/logo.svg);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media screen and (max-width: 800px) {
+  .Logo {
+    margin-left: 30px;
+  }
 }
