--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -4,7 +4,7 @@
 .Navigation_place_header {
   display: flex;
   justify-content: space-between;
-  overflow: hidden;
+  margin-right: 60px;
 }
 .Navigation_place_popup {
   display: flex;
