--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -1,9 +1,17 @@
 .Popup {
   position: fixed;
-  min-width: 320px;
+  visibility: hidden;
+  opacity: 0;
   top: 0;
+  bottom: 0;
   right: 0;
   left: 0;
-  bottom: 0;
+  min-width: 320px;
   background-color: rgba(0, 0, 0, .3);
+  transition: visibility .3s linear, opacity .7s ease;
+}
+.Popup_opened {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility .2s linear, opacity .6s ease;
 }
