--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -8,6 +8,11 @@
   background-size: cover;
 }
 
+.Logo:hover {
+  opacity: .5;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 800px) {
   .Logo {
     margin-left: 30px;
