--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -23,7 +23,7 @@
 .Footer-item {
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
   font-size: 13px;
   line-height: 1.21;
   margin-right: 10px;
