--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -13,6 +13,7 @@
   justify-content: space-around;
   margin: 0 0 0 auto;
   min-height: 100vh;
+  z-index: 10;
   min-width: 320px;
   max-width: 520px;
   background-color: #fff;
