--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   max-width: 1280px;
-  align-self: stretch;
+  min-width: 100%;
 }
 .SearchForm-container {
   display: grid;
@@ -12,6 +12,9 @@
   max-width: 1140px;
   width: 100%;
   background-color: #fff;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #E8E8E8;
+  margin-bottom: 10px;
 }
 
 .SearchForm__button-search {
@@ -55,16 +58,14 @@
 .SearchForm-label {
   display: flex;
   justify-content: center;
-  width: 200px;
-  margin-right: 54px;
+  margin: 0 auto;
 }
 
 .SearchForm-Check {
-  position: relative;
   grid-column: 2/3;
   grid-row: 3;
   display: flex;
   justify-content: flex-end;
-  align-items: flex-start;
+  align-items: stretch;
   align-self: flex-start;
 }
