--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -66,10 +66,10 @@
 
 .MoviesCard__duration {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 13px;
-  line-height: 1.23;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 1.21;
+  color:#A0A0A0;
   margin: 0;
   margin-bottom: 30px;
   width: fit-content;
