--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -17,3 +17,42 @@
   opacity: 1;
   transition: all .5s ease;
 }
+
+.Popup-image {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+.Popup-button-close {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  background-image: url(../../images/button/Close-orange.svg);
+  width: 40px;
+  height: 40px;
+  background-position: center;
+  background-size: content;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.Popup-button-close:hover {
+  cursor: pointer;
+  opacity: .5;
+}
+.Popup-description {
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+  left: 10px;
+  padding: 5px;
+  border-radius: 10px 0;
+  background-color: rgba(255, 255, 255, 0.721);
+  box-shadow: 0 14px 26px rgba(0, 0, 0, 0.11), 0 14px 26px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.21;
+}
