--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,12 +10,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: absolute;
   top: 0;
-  left: auto;
-  right: auto;
+  left: 0;
+  right: 0;
   height: 74px;
-  width: calc(100% - 50px);
+  width: 100%;
   max-width: 1280px;
 }
 .Header::before {
@@ -25,7 +25,7 @@
   left: 0;
   right: 0;
   height: 74px;
-  width: 100vw;
+  width: 100%;
   background: #fff;
 }
 
@@ -63,8 +63,6 @@
 .Header__button-open {
   visibility: hidden;
   opacity: 0;
-  width: 40px;
-  margin-right: 30px;
   background-color: transparent;
   border: none;
   outline: none;
@@ -80,6 +78,8 @@
 
 @media screen and (max-width: 800px) {
   .Header__button-open {
+    width: 40px;
+    margin-right: 30px;
     visibility: visible;
     opacity: 1;
   }
@@ -95,6 +95,5 @@
     padding: 0;
     margin: 0;
     margin-bottom: 20px;
-    align-self: center;
   }
 }
