--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -4,11 +4,11 @@
   grid-template-rows: auto auto auto;
   box-sizing: border-box;
   max-width: 1140px;
-  min-width: 89%;
-  min-height: 134px;
   background-color: #F9F9F9;
   border-radius: 10px;
   overflow: hidden;
+  width: 100%;
+  justify-self: center;
   padding: 6px;
   padding-left: 22px;
 }
@@ -16,13 +16,6 @@
 .MoviesCard:hover {
   transform: translateY(-2px) scale(1.005) translateZ(0);
   box-shadow: 0 14px 26px rgba(0, 0, 0, 0.11), 0 14px 26px;
-}
-.MovieCard__link {
-  grid-row: 1/4;
-  grid-column: 1/4;
-}
-.MovieCard__link:hover {
-  cursor: pointer;
 }
 
 .MoviesCard__title {
@@ -32,12 +25,11 @@
   max-width: 400px;
   margin: 16px 0 13px 0;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 1.2;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.21;
   color: #000;
-  grid-column: 1/3;
+  grid-column: 1/5;
   grid-row: 1;
 }
 
@@ -46,11 +38,8 @@
 }
 
 .MoviesCard__pic {
-  display: block;
   width: 220px;
-  height: 122px;
-  object-fit: cover;
-  object-position: center;
+  min-height: 122px;
   background-image: url('../../images/moviesCard/errorPic.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -61,7 +50,7 @@
 }
 
 .MoviesCard__pic:hover {
-  cursor: zoom-in;
+  cursor: pointer;
 }
 
 .MoviesCard__duration {
@@ -115,4 +104,72 @@
 }
 .MoviesCard__button-like_theme_delete:active {
   background-image: url(../../images/moviesCard/Close-red.svg);
+}
+
+@media screen and (max-width: 780px) {
+
+}
+@media screen and (max-width: 620px) {
+  .MoviesCard {
+    grid-template-columns: minmax(320px, 600px);
+    grid-template-rows: repeat(3, auto);
+    padding: 0;
+    justify-items: flex-start;
+  }
+  .MoviesCard__pic {
+    grid-row: 1;
+    grid-column: 3/1;
+    min-height: 168px;
+    width: 100%;
+    margin-bottom: 14px;
+  }
+  .MoviesCard__title {
+    grid-row: 2;
+    grid-column: span 1;
+    max-width: 300px;
+    margin: 0 0 8px 12px;
+  }
+  .MoviesCard__button-like {
+    grid-row: 2;
+    grid-column: 3/2;
+    align-self: flex-start;
+    margin-right: 16px;
+  }
+  .MoviesCard__duration {
+    grid-row: 3;
+    grid-column: 1;
+    margin: 0 0 14px 12px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .MoviesCard {
+    min-width: 100%;
+  }
+    .MoviesCard__pic {
+    min-width: 300px;
+    max-width: 92%;
+    justify-self: center;
+    margin-left: 0;
+    display: flex;
+  }
+  .MoviesCard__title {
+    font-size: 12px;
+    max-width: 228px;
+  }
+}
+@media screen and (max-width: 350px) {
+  .MoviesCard {
+    grid-template-columns: auto auto;
+    max-width: 300px;
+    width: 300px;
+    padding: 0;
+  }
+  .MoviesCard__pic {
+    width: 300px;
+    max-width: 100%;
+    display: block;
+  }
+  .MoviesCard__button-like {
+    justify-self: flex-end;
+  }
 }
