--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -7,7 +7,6 @@
   bottom: 0;
   right: 0;
   left: 0;
-  min-width: 320px;
   background-color: rgba(0, 0, 0, .3);
   transition: all .4s ease;
 }
@@ -19,9 +18,13 @@
 }
 
 .Popup-image {
-  width: 100%;
-  height: 100%;
-  margin: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+  width: 70vw;
+  min-width: 300px;
 }
 
 .Popup-button-close {
@@ -44,9 +47,11 @@
 }
 .Popup-description {
   position: absolute;
-  bottom: 20px;
-  right: 10px;
-  left: 10px;
+  left: 50%;
+  top: 80%;
+  transform: translate(-50%, -50%);
+  width: 70vw;
+  min-width: 300px;
   padding: 5px;
   border-radius: 10px 0;
   background-color: rgba(255, 255, 255, 0.721);
