--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -30,6 +30,11 @@
   min-height: 115px;
   border-bottom: 1px solid #E8E8E8;
 }
+.HeaderBar_place_profile {
+  margin-bottom: 143px;
+  width: 100%;
+  justify-content: center;
+}
 
 .HeaderBar__title {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
@@ -39,6 +44,11 @@
   margin-bottom: 23px;
   margin-top: 0;
   color: inherit;
+}
+.HeaderBar__title_place_profile {
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
 }
 .HeaderBar__title_place_portfolio {
   color:#A0A0A0;
