--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,32 +1,44 @@
 .Profile {
   max-width: 1280px;
+  width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   min-height: 50vw;
 }
-
 .Profile-form{
   display: flex;
   flex-direction: column;
   max-width: 450px;
-  min-width: 300px;
+  min-width: 410px;
   font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
+.Profile__label {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  font-size: 11px;
+  font-weight: 500;
+  line-height: 1.21;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 16px 0 17px 0;
+}
+.Profile__label:last-of-type {
+  border-bottom: none;
 }
 .Profile__input {
   box-sizing: border-box;
+  text-align: right;
   border: 0;
-  max-width: 358px;
-  width: 100%;
+  max-width: 150px;
   font-family: inherit;
-  font-size: 12px;
-  padding: 10px 5px;
-  margin-top: 48px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  font-size: inherit;
+  margin-top: 0;
+  border-bottom: none;
 }
-
 .Profile__input:focus {
-  outline: 1px groove rgba(106, 151, 235, 0.657);
+  outline: none;
 }
 .Profile__input_type_error:invalid {
   border-bottom-color: #f00;
@@ -37,7 +49,6 @@
   width: 100%;
   height: 0;
 }
-
 .Profile__input-error {
   visibility: hidden;
   font-size: 12px;
@@ -48,7 +59,6 @@
   color: #f00;
   align-self: flex-start;
 }
-
 .Profile__input-error_active {
   visibility: visible;
   position: absolute;
@@ -56,49 +66,15 @@
   left: 0;
 }
 
-.Profile-button-edit {
-  color: green;
-  min-height: 20px;
-  max-width: 100%;
-  font-family: inherit;
-  font-size: 12px;
-  background: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  margin-bottom: 30px;
-  margin-top: 40px;
-}
-
-.Profile-button-exit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 100%;
-  min-height: 20px;
-  background: none;
-  border: none;
-  color: red;
-  font-family: inherit;
-  font-size: 12px;
-}
-
-.Profile-button-edit:hover, .Profile-button-exit:hover {
-  cursor: pointer;
-  opacity: .5;
-}
-
-
-@media screen and (max-height: 414px) {
-  .Profile__input {
-    margin-top: 20px;
+@media screen and (max-width: 620px) {
+  .Profile-form{
+    min-width: 320px;
   }
 }
-
-@media screen and (max-width: 320px) {
-  .Profile__input {
-    margin-top: 20px;
+@media screen and (max-width: 350px) {
+  .Profile__label {
+    width: 260px;
+    align-self: center;
   }
 }
 
