--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -21,7 +21,7 @@
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   width: 100px;
   height: 30px;
-  background-image: url('../../images/button/profile.png');
+  background-image: url('../../images/button/profile.svg');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
