--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -8,7 +8,7 @@
 .AboutProject__containers {
   align-self: center;
   display: grid;
-  grid-template-columns: 1fr 1fr 40px 1fr 1fr;
+  grid-template-columns: 228px 1fr 40px 1fr 1fr;
   max-width: 1140px;
   width: 90%;
 }
@@ -40,7 +40,7 @@
   margin-top: 0;
 }
 .AboutProject__title_theme_green {
-
+  max-width: 228px;
   justify-content: center;
   align-items: center;
   background-color: #2BE080;
@@ -51,6 +51,7 @@
   background-color: #F2F2F2;
 }
 .AboutProject__title_theme_gray, .AboutProject__title_theme_green {
+  font-size: 14px;
   min-height: 36px;
   margin-bottom: 14px;
 }
