--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,18 +1,44 @@
+.Register {
+  max-width: 1280px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  min-height: 50vw;
+}
+.Register-form{
+  display: flex;
+  flex-direction: column;
+  max-width: 450px;
+  min-width: 410px;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+}
+.Register__label {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  font-size: 11px;
+  font-weight: 500;
+  line-height: 1.21;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 16px 0 17px 0;
+}
+.Register__label:last-of-type {
+  border-bottom: none;
+}
 .Register__input {
   box-sizing: border-box;
+  text-align: right;
   border: 0;
-  max-width: 358px;
-  width: 100%;
+  max-width: 150px;
   font-family: inherit;
   font-size: inherit;
-  padding: 10px 5px;
-  margin-top: 13.11%; /*48*/
-  margin-bottom: 5px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin-top: 0;
+  border-bottom: none;
 }
-
 .Register__input:focus {
-  outline: 1px groove rgba(106, 151, 235, 0.657);
+  outline: none;
 }
 .Register__input_type_error:invalid {
   border-bottom-color: #f00;
@@ -23,7 +49,6 @@
   width: 100%;
   height: 0;
 }
-
 .Register__input-error {
   visibility: hidden;
   font-size: 12px;
@@ -34,7 +59,6 @@
   color: #f00;
   align-self: flex-start;
 }
-
 .Register__input-error_active {
   visibility: visible;
   position: absolute;
@@ -42,15 +66,14 @@
   left: 0;
 }
 
-@media screen and (max-height: 414px) {
-  .Register__input {
-    margin-top: 20px;
+@media screen and (max-width: 620px) {
+  .Register-form{
+    min-width: 320px;
   }
 }
-
-@media screen and (max-width: 320px) {
-  .Register__input {
-    margin-top: 10%; /*20*/
+@media screen and (max-width: 350px) {
+  .Register__label {
+    width: 260px;
+    align-self: center;
   }
 }
-
